# scara-plotter

./: README.md  main.py  pyproject.toml
notebooks/: math.ipynb  penplot.ipynb  serial.ipynb  test.ipynb
src/scara/: __init__.py  kinematics.py  ptservo.py
