[project]
name = "scara"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eric Busboom", email = "eric@busboom.org" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pyserial>=3.5",
]

[project.scripts]
scara = "scara:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
